Fix: routing animation breaks on mouse interactions during transition

--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@ body,
 
 body {
   font-family: "Inter";
-  background: #fdfdfd;
+  background: #06061a;
   /* cursor: url("data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMzIiIGhlaWdodD0iMzIiIHZpZXdCb3g9IjAgMCAzMiAzMiIgZmlsbD0ibm9uZSIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj48Y2lyY2xlIGN4PSIxNiIgY3k9IjE2IiByPSIxMCIgZmlsbD0iI0U4QjA1OSIvPjwvc3ZnPg=="),
     auto; */
 }
@@ -49,7 +49,6 @@ svg {
 canvas {
   height: 100svh;
   touch-action: none;
-  opacity: 1;
-  /* opacity: 0; */
-  /* animation: fade-in 5s ease 1s forwards; */
+  opacity: 0;
+  animation: fade-in 2s ease-out 0.2s forwards;
 }
